# dbt-fundamentals

./: dbt_project.yml  pyproject.toml
models/marts/core/: fct_orders.sql
models/staging/jaffle_shop/: src_jaffle_shop.yml  stg_customers.sql  stg_jaffle_shop.yml  stg_orders.sql
models/staging/stripe/: src_stripe.yml  stg_payments.sql  stg_stripe.yml
tests/: assert_stg_payments_total_value_positive.sql
