[tool.poetry]
name = "dbt-fundamentals"
version = "0.1.0"
description = ""
authors = ["Tom Murdoch <tom.murdoch@kinandcarta.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.0.1"
dbt-bigquery = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
